--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 .pytest_cache/
 __pycache__/
 
+# gitignore будет использоватья при загрузку на гитхаб, для запрета гитхабу на доступ к некоторым приватным папкам
+
 
 
 
